# MMCACovid19Vac.jl

./: .gitignore  Project.toml  README.md  build.py  install.jl  install.sh  pre_build.py  pyproject.toml  setup.py  simulate_epidemic.jl
models/mitma/: config.json  config_MMCACovid19-vac.json  config_MMCACovid19.json  initial_conditions.nc
py_interface/: EpiSim.py  MMCACovid19Py.py
src/: EpiSim.jl  MMCACovid19Vac.jl  Project.toml  commands.jl  common.jl  compute.jl  engine.jl  io.jl  mmca.jl  utils.jl
src/epi_sim/: __init__.py  epi_sim.py
test/: runtests.jl
test/data/: config_test.json
